Completed the Dockerfile and tested the container

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-dvc 
-docker 
-sklearn
-python 
-mlflow 
-pytest 
-airflow
-pandas 
-numpy 
-joblib
-uvicorn
 fastapi
+uvicorn
+scikit-learn
+joblib
+numpy
+pandas 
+
