--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,66 +1,59 @@
-name: Churn CI #Name of the Action
+name: Churn CI
 
 # Events 
-# using key value pairs with proprer indentation to write yml files 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
-
 # Actions or Jobs
 jobs: 
 
-  test: # Job to run(in this case testing)
-    runs-on: ubuntu-latest  # where to run the job(test)- github provides this container
+  test: # Job to run testing
+    runs-on: ubuntu-latest
   
-    steps: # steps to follow when running the job
+    steps:
+      # Step 1: Check out the code from the repository 
+      - name: Check out code 
+        uses: actions/checkout@v4
 
-    # step 1: Check out the code from the repository 
-    - name: Check the code 
-      uses: actions/checkout@v4
+      # Step 2: Set up Python environment
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v4  # Updated to v4
+        with:
+          python-version: "3.12"
 
-    # Step 2: setting up the python environment
-    - name: Set up Python 3.12
-      uses: actions/setup-python@v3 # the github action used to setup the environment
-      with:
-        python-version: "3.12"
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    # Step 4: Install dependencies
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    # Step 5: Run test 
-    - name: Test with pytest
-      run: pytest # this automaticaly runs all test cases
-
+      # Step 4: Run tests 
+      - name: Test with pytest
+        run: pytest
 
   build-and-publish:
-    needs: test # makes this build-and-publish wait for test to finish 
+    needs: test # Wait for test job to complete successfully
     runs-on: ubuntu-latest
     
     steps:
-      - name: check the code
-        uses:  actions/checkout@v4
-      -
-        name: Login to Docker Hub
+      - name: Check out code
+        uses: actions/checkout@v4
+      
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
-        name: Set up Docker Buildx
+      
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Build and push
+      
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: jerremiahwilly/prediction-churn-app:latest
-
-    
-
