--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,4 +56,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: jerremiahwilly/prediction-churn-app:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/prediction-churn-app:latest
