--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,13 +14,13 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
-      # Step 1: Check out the code from the repository 
+
       - name: Check out code 
         uses: actions/checkout@v4
 
-      # Step 2: Set up Python environment
+      
       - name: Set up Python 3.12
-        uses: actions/setup-python@v4  # Updated to v4
+        uses: actions/setup-python@v4  
         with:
           python-version: "3.12"
       
@@ -33,13 +33,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      # Step 3: Install dependencies
+      # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Run tests 
+      # Run tests 
       - name: Test with pytest
         run: pytest
 
