--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,18 +14,18 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
-
+      # Step 1: Check out the code from the repository 
       - name: Check out code 
         uses: actions/checkout@v4
 
-      
+      # Step 2: Set up Python environment
       - name: Set up Python 3.12
-        uses: actions/setup-python@v4  
+        uses: actions/setup-python@v4  # Updated to v4
         with:
           python-version: "3.12"
       
       # Adding caching to save pip installs so it dosen't install on every commit
-       - name: Cache pip
+      - name: Cache pip
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
@@ -33,13 +33,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      # Install dependencies
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Run tests 
+      # Step 4: Run tests 
       - name: Test with pytest
         run: pytest
 
