--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,7 @@
 [core]
-    remote = origin
+    remote = original
 ['remote "origin"']
+    url = s3://dvc
+    endpointurl = https://dagshub.com/jerremiahwilly/Customer-churn.s3
+['remote "original"']
     url = https://dagshub.com/jerremiahwilly/Customer-churn.dvc
