--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,26 +43,26 @@ jobs:
       - name: Test with pytest
         run: pytest
 
-  # build-and-publish:
-  #   needs: test # Wait for test job to complete successfully
-  #   runs-on: ubuntu-latest
+  build-and-publish:
+    needs: test # Wait for test job to complete successfully
+    runs-on: ubuntu-latest
     
-  #   steps:
-  #     - name: Check out code
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
       
-  #     - name: Login to Docker Hub
-  #       uses: docker/login-action@v3
-  #       with:
-  #         username: ${{ vars.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
-  #     - name: Build and push
-  #       uses: docker/build-push-action@v6
-  #       with:
-  #         context: .
-  #         push: true
-  #         tags: ${{ vars.DOCKERHUB_USERNAME }}/prediction-churn-app:latest
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/prediction-app:latest
