--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 
 services:
   postgres:
@@ -25,10 +24,17 @@ services:
       - ./airflow/dags:/opt/airflow/dags
       - ./airflow/logs:/opt/airflow/logs        # Add logs volume
       - ./airflow/plugins:/opt/airflow/plugins  # Add plugins volume
+
       - ./Models:/shared_data/Models
-      - ./data:/shared_data/dave
+      - ./data:/shared_data/data
       - ./metrics:/shared_data/metrics
       - ./src:/shared_data/src
+
+      - ./Models:/app/Models
+      - ./metrics:/app/metrics
+      - ./data:/app/data
+      - ./src:/app/src
+
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "8080:8080"
@@ -58,10 +64,17 @@ services:
       - ./airflow/dags:/opt/airflow/dags
       - ./airflow/logs:/opt/airflow/logs        # Add logs volume
       - ./airflow/plugins:/opt/airflow/plugins  # Add plugins volume
+
       - ./Models:/shared_data/Models
-      - ./data:/shared_data/dave
+      - ./data:/shared_data/data
       - ./metrics:/shared_data/metrics
       - ./src:/shared_data/src
+
+      - ./Models:/app/Models
+      - ./metrics:/app/metrics
+      - ./data:/app/data
+      - ./src:/app/src
+      
       - /var/run/docker.sock:/var/run/docker.sock
     command: airflow scheduler
     networks:
