--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-fastapi
-uvicorn
-scikit-learn
-joblib
-numpy
-pandas 
-pytest
-httpx
-anyio
-mlflow 
-dagshub
+fastapi==0.116.1
+uvicorn==0.35.0
+scikit-learn==1.7.1
+joblib==1.5.2
+numpy==1.26.4
+pandas==2.3.2
+pytest==8.4.2
+httpx==0.28.1
+anyio==4.10.0
+mlflow==2.11.4
+dagshub==0.6.2
+setuptools>=65.0.0,<81.0.0
+prometheus-fastapi-instrumentator==7.1.0
