--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.116.1
 uvicorn==0.35.0
+scipy>=1.8.0,<2.0.0
 scikit-learn==1.7.1
 joblib==1.5.2
 numpy==1.26.4
@@ -9,5 +10,5 @@ httpx==0.28.1
 anyio==4.10.0
 mlflow==2.11.4
 dagshub==0.6.2
-setuptools>=65.0.0,<81.0.0
+setuptools==80.9.0
 prometheus-fastapi-instrumentator==7.1.0
