--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,4 +1,37 @@
+global:
+  scrape_interval: 40s
+  scrape_timeout: 10s
+  evaluation_interval: 1m
+
 scrape_configs:
+
+# Apllication-Level metrics
   - job_name: 'fastapi'
+    metrics_path: '/metrics'
     static_configs:
       - targets: ['fastapi-app:8000']
+
+  - job_name: 'prometheus'
+    metrics_path: '/metrics'
+    static_configs:
+      - targets: ['prometheus:9090']
+
+
+# System-Level metrics, using exporters
+  - job_name: "node"
+    static_configs:
+      - targets: ["node-exporter:9100"]
+
+  - job_name: "cadvisor"
+    static_configs:
+      - targets: ["cadvisor:8080"]
+
+  - job_name: "postgres"
+    static_configs:
+      - targets: ["postgres-exporter:9187"]
+
+# pushgateway to collect short-lived job metrics from dags
+  - job_name: 'pushgateway'
+    honor_labels: true
+    static_configs:
+      - targets: ['pushgateway:9091']
