--- a/docker-compose.monitor.yaml
+++ b/docker-compose.monitor.yaml
@@ -9,9 +9,9 @@ services:
   postgres:
     image: postgres:14
     environment:
-      - POSTGRES_DB: admin_db
-      - POSTGRES_USER: admin
-      - POSTGRES_PASSWORD: admin
+      POSTGRES_DB: admin_db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
     ports:
       - "5432:5432"
     networks:
@@ -54,10 +54,16 @@ services:
       - "9100:9100"
     networks:
       - default
-    command:
-      - '--path.rootfs=/host'
+    pid: "host"
     volumes:
-      - /:/host:ro,rslave
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
 
   postgres-exporter:
     image: prometheuscommunity/postgres-exporter:latest
@@ -68,7 +74,7 @@ services:
     networks:
       - default
     depends_on:
-      - postgress
+      - postgres
 
   cadvisor:
     image: gcr.io/google-containers/cadvisor:latest
@@ -81,7 +87,10 @@ services:
       - /var/run:/var/run:ro
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
+    privileged: true 
+    restart: unless-stopped
 
+    
 volumes:
   postgres_data:
   prometheus_data:
